[package]
name = "hash-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bellpepper-core = { version="0.4", default-features = false }
ff = { version = "0.13", features = ["derive"] }
generic-array = "1.0"
neptune = { version = "13.0", default-features = false }
nova-snark = "0.32"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "verifier"
harness = false
